--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,15 @@ body {
   box-shadow: 0 0 40px rgba(0,0,0,0.4);
   top: 0;
   bottom: 0;
+  right: 0;
   width: 300px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 10rem;
   list-style: none;
-  transform: translateX(-120%);
+  transform: translateX(120%);
   transition: transform 0.2s;
+  overflow-y: auto;
+  z-index: 1;
 }
 .menu.is-open {
   transform: translateX(0);
@@ -44,6 +47,9 @@ body {
 .menu a:hover {
   background-color: #eee;
 }
+.menu li.is-active {
+  background-color: #ffffcc;
+}
 .menu li.is-active a:before {
   position: absolute;
   content: "";
@@ -63,7 +69,7 @@ body {
   border-radius: 50%;
   background-color: #555;
   border: 0 none;
-  margin-left: 1rem;
+  margin: 1rem;
   color: #eee;
   cursor: pointer;
   transition: background-color 0.2s;
@@ -118,3 +124,35 @@ iframe {
 .flex-column { flex-direction: column !important; }
 .flex-grow-1 { flex-grow: 1 !important; }
 .align-items-center { align-items: center !important; }
+
+.time-periods {
+  text-align: center;
+  display: flex;
+  color: rgba(255,255,255,0.4);
+  line-height: 2rem;
+  font-size: 1rem;
+  position: relative;
+}
+.time-period:nth-child(1) {
+  background-color: #456;
+}
+.time-period:nth-child(2) {
+  background-color: #564;
+}
+.time-period:nth-child(3) {
+  background-color: #645;
+}
+.time-period:nth-child(4) {
+  background-color: #546;
+}
+.time-period-marker {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  background: white;
+  display: block;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  transition: left 0.6s;
+}
